# neamt-cli

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: icon.icns
cli/: __main__.py  output.py
cli/commands/: config.py  doctor.py  info.py  install.py  list.py  server.py  toggle.py  uninstall.py  update.py
dashboard/: chat_store.py  server.py
dashboard/templates/: shell.html
dashboard/web/: index.html
dashboard/web/assets/: ApiUsagePage-Cc3fzpw9.js  ApiUsagePage-DB2GDuXF.js  MemoryPage-BWInn1PN.js  MemoryPage-e3_WNuwr.js  NeuralActivityPage-klK5SsgK.js  NeuralActivityPage-sziW3Ea1.js  OptimizerLogsPage-BhMAkYk6.js  OptimizerLogsPage-BzgEdLBV.js  ScribePage-CbVUZeCo.js  ScribePage-DuO2Q9Cb.js  SettingsPage-C63q7u2L.js  SettingsPage-namoRg1n.js  StudioPage-BVmzOc_f.js  StudioPage-B_1ntD86.js  charts-osFRoX6V.js  circle-check-BtvhFE04.js  circle-check-gDrTqgGi.js  index-CKBqGDBb.css  index-CdSZWIzN.js  index-DK6IecAW.css  index-PUVBROL-.js  loader-circle-Bq08wlxB.js  loader-circle-Ck4DZ6eY.js  react-5zJn-4Zv.js  refresh-cw-CeEX0t1U.js  refresh-cw-CxQaz5WX.js
electron/: main.js  preload.js  python.js  splash.html
neamt/: __init__.py  bridge.py  config.py  core.py  loader.py  manifest.py  permissions.py  sandbox.py
neamt/cli/: __main__.py
neamt/cli/commands/: config.py  doctor.py  info.py  install.py  list.py  server.py  toggle.py  uninstall.py  update.py
tests/: test_loader.py  test_manifest.py  test_permissions.py  test_sandbox.py
tests/fixtures/malicious_skill/: main.py  neamt.manifest.json
tests/fixtures/valid_skill/: main.py  neamt.manifest.json
