[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neamt"
version = "0.2.0"
description = "The Linux of AI — local, modular AI skill runtime with a Claude-powered dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kevin Neamt", email = "neamtkevinroberto@gmail.com" },
]
keywords = ["ai", "skills", "local", "sandbox", "modular", "cli", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "cryptography>=42.0",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]

[project.urls]
Homepage = "https://neamt.ai"
Repository = "https://github.com/Kevin-Neamt/neamt-cli"
Issues = "https://github.com/Kevin-Neamt/neamt-cli/issues"

[project.scripts]
neamt = "neamt.cli.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["neamt", "dashboard"]
artifacts = ["dashboard/web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
